--- a/assignment02/index.html
+++ b/assignment02/index.html
@@ -17,25 +17,22 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
-
   <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <div class="navbar-header">
+    <div class="navbar-header left-side-header">
       <a class="navbar-brand" href="#">
       Food, LCC
       </a>
-    </div>
-    <!-- Single button -->
-		<div class="btn-group align">
-		  <button type="button" class="btn btn-default dropdown-toggle visible-xs" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <!-- Single button -->
+		  <button type="button" class="btn btn-default dropdown-toggle visible-xs right-side-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		    Menu <span class="caret"></span>
 		  </button>
-		  <ul class="dropdown-menu">
-		    <li><a href="#">Action1</a></li>
-		    <li><a href="#">Action2</a></li>
+		  <ul class="dropdown-menu dropdown-menu-right">
+		    <li><a href="#">Chicken</a></li>
+		    <li><a href="#">Beef</a></li>
+		    <li><a href="#">Sushi</a></li>
 		  </ul>
-		</div>
-
+    </div>
   </div>
 </nav>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
