--- a/assignment02/index.html
+++ b/assignment02/index.html
@@ -25,7 +25,7 @@
       </a>
       <!-- Single button -->
 		  <button type="button" class="btn btn-default dropdown-toggle visible-xs right-side-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		    Menu <span class="caret"></span>
+		  <span class="glyphicon glyphicon-menu-hamburger"></span>
 		  </button>
 		  <ul class="dropdown-menu dropdown-menu-right">
 		    <li><a href="#">Chicken</a></li>
