--- a/assignment02/index.html
+++ b/assignment02/index.html
@@ -17,24 +17,79 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
+<header>
   <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <div class="navbar-header left-side-header">
+    <div class="navbar-header">
       <a class="navbar-brand" href="#">
       Food, LCC
       </a>
       <!-- Single button -->
-		  <button type="button" class="btn btn-default dropdown-toggle visible-xs right-side-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		  <span class="glyphicon glyphicon-menu-hamburger"></span>
-		  </button>
-		  <ul class="dropdown-menu dropdown-menu-right">
-		    <li><a href="#">Chicken</a></li>
-		    <li><a href="#">Beef</a></li>
-		    <li><a href="#">Sushi</a></li>
-		  </ul>
+		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
+      <div id="collapsable-nav" class="collapse navbar-collapse">
+		  <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+		    <li><a href="#">
+              <span class="glyphicon glyphicon-cutlery"></span>
+              <br class="visible-xs">Chicken</a>
+        </li>
+		    <li><a href="#">
+              <span class="glyphicon glyphicon-cutlery"> </span>
+              <br class="visible-xs">Beef</a>
+        </li>
+		    <li><a href="#"><span class="glyphicon glyphicon-cutlery"> <span>
+              <br class="visible-xs">Sushi</a>
+        </li>
+		  </ul>
+      </div>
   </div>
 </nav>
+</header>
+
+<p class="text-center">
+  <b> Our Menu </b>
+  </p>
+
+  <div id="menutext" class="container-fluid">
+    <p class="text-center">
+    <b> Chickens </b>
+    </p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod, elit in tempus fermentum, orci enim tincidunt lectus, id tincidunt lorem erat vitae purus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum nisl a congue imperdiet. Nunc non augue ultrices, dictum tellus vitae, tincidunt eros. Ut ac mi at orci sollicitudin cursus tincidunt quis enim. Nulla et neque vel urna posuere placerat ut nec leo. Donec diam risus, cursus vel pretium hendrerit, interdum ac felis. Mauris sollicitudin lacus eu tincidunt vehicula. Ut bibendum tortor lectus, nec tempus nunc vestibulum nec. Cras dapibus velit id lorem luctus, eu lacinia ex blandit. Curabitur eleifend orci sit amet dolor feugiat, vitae fringilla eros tempus. Fusce rutrum massa arcu, sit amet imperdiet arcu vehicula in.
+
+    Morbi lacinia ac sapien vitae bibendum. Ut fermentum massa ex. Sed dapibus ut sem quis viverra. Nullam quis erat rutrum, condimentum erat vitae, pretium lorem. Cras non sapien eu libero lacinia feugiat. Nulla diam justo, bibendum sed felis pharetra, molestie laoreet dui. Vestibulum fringilla est a pulvinar accumsan. Ut viverra erat non ipsum lacinia malesuada. Donec leo diam, fermentum non ultrices in, iaculis feugiat quam. Praesent turpis ante, blandit vitae dapibus vel, blandit quis eros. In porttitor porta magna, sed pellentesque tellus faucibus ut. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In hac habitasse platea dictumst. Proin maximus scelerisque quam, ac consequat risus luctus sit amet.
+
+    Curabitur ut interdum felis. Morbi in imperdiet arcu, non tempus magna. Vivamus finibus convallis semper. Proin sed ipsum scelerisque, malesuada ex ut, congue nisl. Nulla commodo auctor posuere. Integer varius ante id mauris molestie, sit amet tempor eros porta. Aliquam ut urna dictum, porta est vitae, pretium nulla. Maecenas maximus, lectus eu tincidunt lobortis, ligula orci imperdiet est, sed congue felis orci et elit. Vivamus quis eros leo. Donec tincidunt vitae leo id suscipit. In lacinia mi nisl, at consectetur purus luctus nec. Proin sollicitudin maximus rhoncus. Proin ut purus porttitor, sagittis nibh ut, ullamcorper purus. Vestibulum pretium pulvinar enim, mattis volutpat ex tempus sit amet. Nullam laoreet odio eu efficitur fringilla.
+  </div>
+
+  <div id="menutext" class="container-fluid">
+    <p class="text-center">
+    <b> Beef </b>
+    </p>
+     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod, elit in tempus fermentum, orci enim tincidunt lectus, id tincidunt lorem erat vitae purus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum nisl a congue imperdiet. Nunc non augue ultrices, dictum tellus vitae, tincidunt eros. Ut ac mi at orci sollicitudin cursus tincidunt quis enim. Nulla et neque vel urna posuere placerat ut nec leo. Donec diam risus, cursus vel pretium hendrerit, interdum ac felis. Mauris sollicitudin lacus eu tincidunt vehicula. Ut bibendum tortor lectus, nec tempus nunc vestibulum nec. Cras dapibus velit id lorem luctus, eu lacinia ex blandit. Curabitur eleifend orci sit amet dolor feugiat, vitae fringilla eros tempus. Fusce rutrum massa arcu, sit amet imperdiet arcu vehicula in.
+
+    Morbi lacinia ac sapien vitae bibendum. Ut fermentum massa ex. Sed dapibus ut sem quis viverra. Nullam quis erat rutrum, condimentum erat vitae, pretium lorem. Cras non sapien eu libero lacinia feugiat. Nulla diam justo, bibendum sed felis pharetra, molestie laoreet dui. Vestibulum fringilla est a pulvinar accumsan. Ut viverra erat non ipsum lacinia malesuada. Donec leo diam, fermentum non ultrices in, iaculis feugiat quam. Praesent turpis ante, blandit vitae dapibus vel, blandit quis eros. In porttitor porta magna, sed pellentesque tellus faucibus ut. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In hac habitasse platea dictumst. Proin maximus scelerisque quam, ac consequat risus luctus sit amet.
+
+    Curabitur ut interdum felis. Morbi in imperdiet arcu, non tempus magna. Vivamus finibus convallis semper. Proin sed ipsum scelerisque, malesuada ex ut, congue nisl. Nulla commodo auctor posuere. Integer varius ante id mauris molestie, sit amet tempor eros porta. Aliquam ut urna dictum, porta est vitae, pretium nulla. Maecenas maximus, lectus eu tincidunt lobortis, ligula orci imperdiet est, sed congue felis orci et elit. Vivamus quis eros leo. Donec tincidunt vitae leo id suscipit. In lacinia mi nisl, at consectetur purus luctus nec. Proin sollicitudin maximus rhoncus. Proin ut purus porttitor, sagittis nibh ut, ullamcorper purus. Vestibulum pretium pulvinar enim, mattis volutpat ex tempus sit amet. Nullam laoreet odio eu efficitur fringilla.
+  </div>
+
+
+  <div id="menutext" class="container-fluid">
+    <p class="text-center">
+    <b> Sushi </b>
+    </p>
+     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod, elit in tempus fermentum, orci enim tincidunt lectus, id tincidunt lorem erat vitae purus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum nisl a congue imperdiet. Nunc non augue ultrices, dictum tellus vitae, tincidunt eros. Ut ac mi at orci sollicitudin cursus tincidunt quis enim. Nulla et neque vel urna posuere placerat ut nec leo. Donec diam risus, cursus vel pretium hendrerit, interdum ac felis. Mauris sollicitudin lacus eu tincidunt vehicula. Ut bibendum tortor lectus, nec tempus nunc vestibulum nec. Cras dapibus velit id lorem luctus, eu lacinia ex blandit. Curabitur eleifend orci sit amet dolor feugiat, vitae fringilla eros tempus. Fusce rutrum massa arcu, sit amet imperdiet arcu vehicula in.
+
+    Morbi lacinia ac sapien vitae bibendum. Ut fermentum massa ex. Sed dapibus ut sem quis viverra. Nullam quis erat rutrum, condimentum erat vitae, pretium lorem. Cras non sapien eu libero lacinia feugiat. Nulla diam justo, bibendum sed felis pharetra, molestie laoreet dui. Vestibulum fringilla est a pulvinar accumsan. Ut viverra erat non ipsum lacinia malesuada. Donec leo diam, fermentum non ultrices in, iaculis feugiat quam. Praesent turpis ante, blandit vitae dapibus vel, blandit quis eros. In porttitor porta magna, sed pellentesque tellus faucibus ut. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In hac habitasse platea dictumst. Proin maximus scelerisque quam, ac consequat risus luctus sit amet.
+
+    Curabitur ut interdum felis. Morbi in imperdiet arcu, non tempus magna. Vivamus finibus convallis semper. Proin sed ipsum scelerisque, malesuada ex ut, congue nisl. Nulla commodo auctor posuere. Integer varius ante id mauris molestie, sit amet tempor eros porta. Aliquam ut urna dictum, porta est vitae, pretium nulla. Maecenas maximus, lectus eu tincidunt lobortis, ligula orci imperdiet est, sed congue felis orci et elit. Vivamus quis eros leo. Donec tincidunt vitae leo id suscipit. In lacinia mi nisl, at consectetur purus luctus nec. Proin sollicitudin maximus rhoncus. Proin ut purus porttitor, sagittis nibh ut, ullamcorper purus. Vestibulum pretium pulvinar enim, mattis volutpat ex tempus sit amet. Nullam laoreet odio eu efficitur fringilla.
+  </div>
+
+
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
